--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "framer-motion": "^11.11.17",
     "next": "16.0.3",
+    "next-themes": "^0.4.4",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
