--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "portfolio",
+  "name": "Portfolio",
+  "description": "Mohamed Chakkir's Portfolio built with Next.js v16 and Tailwind CSS v4",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,7 +12,6 @@
   "dependencies": {
     "framer-motion": "^11.11.17",
     "next": "16.0.3",
-    "next-themes": "^0.4.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0"
