--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,9 @@
 {
+  "semi": true,
   "trailingComma": "es5",
   "singleQuote": true,
+  "printWidth": 80,
+  "tabWidth": 2,
+  "useTabs": false,
   "plugins": ["prettier-plugin-tailwindcss"]
 }
