--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.17",
-    "next": "16.0.7",
+    "next": "^16.0.10",
     "next-intl": "^4.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
